[package]
name = "redoc_try_it_out_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.67", features = ["Window", "Document", "HtmlElement", "HtmlScriptElement", "Event"] }
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib"]